# tempo-mcp-validation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.ps1  run.sh  tasks.py  tools_snapshot.json
.github/workflows/: validate.yml
client/: discover.py  mcp_client.py  shapes.py  tempo_api.py
config/: overrides.yaml  prometheus.yml  tempo.yaml
config/grafana/dashboards/: tempo-backend.json  tempo-mcp-server.json
config/grafana/provisioning/dashboards/: dashboards.yaml
config/grafana/provisioning/datasources/: datasources.yaml
docs/: RUNNING.md  dashboards.md  e2e-walkthrough.md  runbook.md  validation-matrix.md
docs/adr/: 0001-runtime-tool-discovery.md  0002-parity-against-direct-api.md  0003-keep-seeded-traces-searchable.md  0004-factory-fixtures-for-anyio.md  0005-multitenancy-and-legacy-overrides.md
scripts/: capture_e2e.py
seed/: expected.json  generate_traces.py
tests/: conftest.py  test_multitenancy.py  test_negative.py  test_parity.py  test_protocol.py  test_security.py  test_tag_discovery.py  test_tools_contract.py  test_trace_by_id.py  test_traceql_metrics.py  test_traceql_search.py
usecases/: runner.py  usecases.yaml
