[project]
name = "tempo-mcp-validation"
version = "0.1.0"
description = "Validation harness for Grafana Tempo's native MCP server."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # The streamablehttp_client transport is deprecated upstream but its
    # successor doesn't yet accept the headers we need (X-Scope-OrgID).
    "ignore:Use `streamable_http_client`:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
